--- a/style.css
+++ b/style.css
@@ -20,3 +20,11 @@ header{
     align-items: center;
     text-align: center;
 }
+
+.content_section{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
