--- a/styles/books.css
+++ b/styles/books.css
@@ -1,8 +1,8 @@
 .book_container{
     width: 300px;
     height: 400px;
-    background-color: aqua;
-    border: 1px solid white;
+    background-color: white;
+    border: 1px solid rgb(146, 146, 146);
     border-radius: 5%;
 }
 
@@ -13,22 +13,31 @@
 .book_img_section{
     width: 100%;
     height: 100px;
-    background-color: antiquewhite;
+    background-color: rgb(227, 227, 227);
+}
+.book_img_section img{
+    width: 100px;
+    height: 100px;
 }
 
 .book_info_section{
     width: 100%;
     height: 100px;
-    background-color: aqua;
+    background-color: white;
 }
 
 .book_comment_section{
     width: 100%;
     height: 100px;
-    background-color: antiquewhite;
+    background-color: rgb(227, 227, 227);
 }
 
 .book_input_section{
     height: 30px;
-    background-color: white;
+    background-color: rgb(202, 202, 202);
+}
+
+.send_btn img{
+    width: 24px;
+    height: 24px;
 }
