--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html{
 body{
     margin: 0;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.744);
+    background-color: #05171e;
 }
 
 header{
@@ -14,7 +14,8 @@ header{
     top: 0;
     min-height: 100px;
     height: auto;
-    background-color: rgb(127, 189, 255);
+    color: white;
+    background-color: #082029;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
