--- a/styles/books.css
+++ b/styles/books.css
@@ -1,8 +1,7 @@
 .book_container{
     width: 300px;
     height: 400px;
-    background-color: white;
-    border: 1px solid rgb(146, 146, 146);
+    background-color: #0d3240;
     border-radius: 5%;
 }
 
@@ -13,7 +12,9 @@
 .book_img_section{
     width: 100%;
     height: 100px;
-    background-color: rgb(227, 227, 227);
+    background-color: #124758;
+    border-top: 1px solid #5ca8c4;
+    border-bottom: 1px solid #5ca8c4;
 }
 .book_img_section img{
     width: 100px;
