--- a/style.css
+++ b/style.css
@@ -27,5 +27,17 @@ header{
     height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: center;
+}
+
+
+/* Später wieder raus nehmen! */
+.test_section{
+    width: 300px;
+    height: 400px;
+    background-color: #0d3240;
+    border-radius: 5%;
+    border: 1px solid white;
+}
+.seperator{
+    height: 50px;
 }
