--- a/styles/books.css
+++ b/styles/books.css
@@ -11,6 +11,9 @@
     color: white;
 }
 
+.book_title_section{
+}
+
 .book_img_section{
     width: 100%;
     height: 100px;
@@ -19,6 +22,8 @@
     border-bottom: 1px solid #5ca8c4;
 }
 .book_img_section img{
+    display: block;
+    margin: auto;
     width: 100px;
     height: 100px;
 }
