add new style to book containera

--- a/styles/testformat.css
+++ b/styles/testformat.css
@@ -1,21 +1,27 @@
 .test_container_section{
     width: 300px;
     height: 500px;
+    color: white;
     background-color: #0d3240;
     border-radius: 5%;
     border: 1px solid white;
+    margin: 12px;
 }
+
 
 .container1{
     width: 100%;
     height: 52px;
     color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container1 h1{
-    margin-block-start: 0;
-    margin-block-end: 0.;
+margin: 0;
 }
+
 
 .container2{
     width: 100%;
@@ -32,35 +38,107 @@
     height: 100px;
 }
 
+
 .container3{
-    width: 100%;
-    height: 130px;
+    width: 90%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 12px;
 }
 
-.container4{
+.price{
     width: 100%;
-    height: 100px;
-    border-top: 1px solid #5ca8c4;
+    
 }
+
+.likes{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.likes p{
+    margin: 0;
+    padding-right: 12px;
+}
+
+.likes img{
+    width: 34px;
+    height: 34px;
+    padding-right: 12px;
+    filter: invert(50%);
+}
+/* Filter invert auf Null setzen wenn drauf geklickt wird! */
+
+.container4{
+    display: flex;
+    padding-left: 12px;
+}
+
 
 .container5{
     width: 100%;
-    height: 150px;
+    height: 100px;
+    border-top: 1px solid #5ca8c4;
+    padding-left: 12px;
+}
+
+.container5 h4{
+    color: white;
+    margin: 0;
+    padding: 8px 0;
 }
 
 
+.container6{
+    width: 100%;
+    height: 120px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.input_container{
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.input_field{
+    width: 70%;
+    border-bottom: 1px solid white;
+}
+
+.send_button{
+    padding-left: 12px;
+}
+.send_button img{
+    width: 24px;
+    height: 24px;
+    float: left;
+    filter: invert(100%);
+}
+
+/*  */
+/*  */
+/*  */
 .overflow{
     width: 70%;
     height: 100px;
     overflow: scroll;
 }
 .overflow::-webkit-scrollbar {
-    width: 2px;
+    width: 8px;
 }
-.overflow::-webkit-scrollbar-track {
+/* .overflow::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
     border-radius: 10px;
-}
+} */
 
 .overflow::-webkit-scrollbar-thumb {
     border-radius: 10px;
