--- a/style.css
+++ b/style.css
@@ -17,9 +17,20 @@ header{
     color: white;
     background-color: #082029;
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
-    text-align: center;
+}
+
+.header_content{
+    width: 100%;
+    height: 80%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.header_content img{
+    width: 60px;
+    height: 60px;
 }
 
 .content_section{
