--- a/styles/testformat.css
+++ b/styles/testformat.css
@@ -29,6 +29,7 @@ margin: 0;
     background-color: #124758;
     border-top: 1px solid #5ca8c4;
     border-bottom: 1px solid #5ca8c4;
+    display: flex;
 }
 
 .container2 img{
@@ -40,16 +41,19 @@ margin: 0;
 
 
 .container3{
-    width: 90%;
+    width: 100%;
     height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-left: 12px;
+    /* padding: 0 12px; */
 }
 
 .price{
     width: 100%;
+    color: red;
+    font-size: 18px;
+    font-weight: bold;
     
 }
 
@@ -66,16 +70,19 @@ margin: 0;
 }
 
 .likes img{
-    width: 34px;
+width: 34px;
     height: 34px;
-    padding-right: 12px;
+}
+
+.likes_toggle{
     filter: invert(50%);
 }
-/* Filter invert auf Null setzen wenn drauf geklickt wird! */
+
 
 .container4{
+    width: 100%;
     display: flex;
-    padding-left: 12px;
+    /* padding-left: 12px; */
 }
 
 
@@ -83,7 +90,7 @@ margin: 0;
     width: 100%;
     height: 100px;
     border-top: 1px solid #5ca8c4;
-    padding-left: 12px;
+    /* padding-left: 12px; */
 }
 
 .container5 h4{
@@ -110,7 +117,11 @@ margin: 0;
 }
 
 .input_field{
-    width: 70%;
+    width: 75%;
+    height: 24px;
+    color: white;
+    background-color: #124758;
+    border: none;
     border-bottom: 1px solid white;
 }
 
