add onclick and new style properties

--- a/styles/testformat.css
+++ b/styles/testformat.css
@@ -27,13 +27,12 @@ margin: 0;
     width: 100%;
     height: 120px;
     background-color: #124758;
-    border-top: 1px solid #5ca8c4;
-    border-bottom: 1px solid #5ca8c4;
+    border-top: 2px solid #5ca8c4;
+    border-bottom: 2px solid #5ca8c4;
     display: flex;
 }
 
 .container2 img{
-    display: block;
     margin: auto;
     width: 100px;
     height: 100px;
@@ -102,9 +101,9 @@ width: 34px;
 
 .container6{
     width: 100%;
-    height: 120px;
+    height: 125px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -139,12 +138,14 @@ width: 34px;
 /*  */
 /*  */
 .overflow{
-    width: 70%;
-    height: 100px;
+    width: 90%;
+    height: 120px;
     overflow: scroll;
+    display: flex;
+    gap: 24px;
 }
 .overflow::-webkit-scrollbar {
-    width: 8px;
+    width: 5px;
 }
 /* .overflow::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
@@ -153,5 +154,5 @@ width: 34px;
 
 .overflow::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+    -webkit-box-shadow: inset 0 0 6px #73c4e0; 
 }
