--- a/styles/testformat.css
+++ b/styles/testformat.css
@@ -1,158 +1,158 @@
-.test_container_section{
-    width: 300px;
-    height: 500px;
-    color: white;
-    background-color: #0d3240;
-    border-radius: 5%;
-    border: 1px solid white;
-    margin: 12px;
+.test_container_section {
+  width: 300px;
+  height: 500px;
+  color: white;
+  background-color: #0d3240;
+  border-radius: 5%;
+  border: 1px solid white;
+  margin: 12px;
 }
 
-
-.container1{
-    width: 100%;
-    height: 52px;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.container1 {
+  width: 100%;
+  height: 52px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.container1 h1{
-margin: 0;
+.container1 h1 {
+  margin: 0;
 }
 
-
-.container2{
-    width: 100%;
-    height: 120px;
-    background-color: #124758;
-    border-top: 2px solid #5ca8c4;
-    border-bottom: 2px solid #5ca8c4;
-    display: flex;
+.container2 {
+  width: 100%;
+  height: 120px;
+  background-color: #124758;
+  border-top: 2px solid #5ca8c4;
+  border-bottom: 2px solid #5ca8c4;
+  display: flex;
 }
 
-.container2 img{
-    margin: auto;
-    width: 100px;
-    height: 100px;
+.container2 img {
+  margin: auto;
+  width: 100px;
+  height: 100px;
 }
 
-
-.container3{
-    width: 100%;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* padding: 0 12px; */
+.container3 {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* padding: 0 12px; */
 }
 
-.price{
-    width: 100%;
-    color: red;
-    font-size: 18px;
-    font-weight: bold;
-    
+.price {
+  width: 100%;
+  color: red;
+  font-size: 18px;
+  font-weight: bold;
 }
 
-.likes{
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+.likes {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
-.likes p{
-    margin: 0;
-    padding-right: 12px;
+.likes p {
+  margin: 0;
+  padding-right: 12px;
 }
 
-.likes img{
-width: 34px;
-    height: 34px;
+.likes img {
+  width: 34px;
+  height: 34px;
+  filter: invert(50%);
 }
 
-.likes_toggle{
-    filter: invert(50%);
+.likes_toggle img {
+  filter: invert(0%);
 }
 
-
-.container4{
-    width: 100%;
-    display: flex;
-    /* padding-left: 12px; */
+.container4 {
+  width: 100%;
+  display: flex;
+  /* padding-left: 12px; */
 }
 
-
-.container5{
-    width: 100%;
-    height: 100px;
-    border-top: 1px solid #5ca8c4;
-    /* padding-left: 12px; */
+.container5 {
+  width: 100%;
+  height: 100px;
+  border-top: 1px solid #5ca8c4;
+  /* padding-left: 12px; */
 }
 
-.container5 h4{
-    color: white;
-    margin: 0;
-    padding: 8px 0;
+.container5 h4 {
+  color: white;
+  margin: 0;
+  padding: 8px 0;
 }
 
-
-.container6{
-    width: 100%;
-    height: 125px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.container6 {
+  width: 100%;
+  height: 125px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.input_container{
-    width: 100%;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.input_container {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.input_field{
-    width: 75%;
-    height: 24px;
-    color: white;
-    background-color: #124758;
-    border: none;
-    border-bottom: 1px solid white;
+.input_field {
+  width: 75%;
+  height: 24px;
+  color: white;
+  background-color: #124758;
+  border: none;
+  border-bottom: 1px solid white;
 }
 
-.send_button{
-    padding-left: 12px;
+.send_button {
+  padding-left: 12px;
 }
-.send_button img{
-    width: 24px;
-    height: 24px;
-    float: left;
-    filter: invert(100%);
+.send_button img {
+  width: 24px;
+  height: 24px;
+  float: left;
+  filter: invert(100%);
 }
 
 /*  */
 /*  */
 /*  */
-.overflow{
-    width: 90%;
-    height: 120px;
-    overflow: scroll;
-    display: flex;
-    gap: 24px;
+.comment_container {
+  width: 90%;
+  height: 120px;
+  overflow: scroll;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
-.overflow::-webkit-scrollbar {
-    width: 5px;
+.comment_container::-webkit-scrollbar {
+  width: 5px;
 }
 /* .overflow::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
     border-radius: 10px;
 } */
 
-.overflow::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px #73c4e0; 
+.comment_container::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px #73c4e0;
+}
+
+.comment_content {
+  display: flex;
+  gap: 18px;
 }
