--- a/styles/books.css
+++ b/styles/books.css
@@ -1,10 +1,10 @@
-.test_container_section {
+.master_container_section {
   width: 300px;
   height: 500px;
   color: white;
   background-color: #0d3240;
   border-radius: 5%;
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.344);
   margin: 38px;
 }
 
@@ -19,7 +19,7 @@
 
 .container1 h1 {
   margin: 0;
-  font-size: 24px;
+  font-size: 22px;
 }
 
 .container2 {
@@ -38,16 +38,16 @@
 }
 
 .container3 {
-  width: 100%;
+  width: 95%;
   height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* padding: 0 12px; */
+  padding-left: 10px;
 }
 
 .price {
-  width: 100%;
+  width: 95%;
   color: red;
   font-size: 18px;
   font-weight: bold;
@@ -76,38 +76,41 @@
 }
 
 .container4 {
-  width: 100%;
+  width: 95%;
   display: flex;
-  /* padding-left: 12px; */
+  padding-left: 10px;
+  padding-bottom: 4px;
 }
 
 .container5 {
   width: 100%;
   height: 100px;
   border-top: 1px solid #5ca8c4;
-  /* padding-left: 12px; */
+  
 }
 
 .container5 h4 {
   color: white;
   margin: 0;
-  padding: 8px 0;
+  padding: 8px 10px;
 }
 
 .container6 {
-  width: 100%;
+  width: 95%;
   height: 125px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-left: 10px;
 }
 
 .input_container {
-  width: 100%;
+  width: 95%;
   height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-left: 10px;
 }
 
 .input_field {
@@ -140,10 +143,13 @@
   flex-direction: column;
   gap: 12px;
 }
+
+
 .comment_container::-webkit-scrollbar {
   width: 5px;
 }
-/* .overflow::-webkit-scrollbar-track {
+
+/* .comment_container::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
     border-radius: 10px;
 } */
@@ -152,6 +158,7 @@
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px #73c4e0;
 }
+
 
 .comment_content_style {
   display: flex;
