--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 header {
   position: sticky;
   top: 0;
+  z-index: 1;
   width: 100%;
   min-height: 100px;
   height: auto;
@@ -40,7 +41,7 @@ header {
 
 .content_section {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
 }
@@ -50,6 +51,24 @@ header {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  padding-bottom: 50px;
+}
+
+footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #082029;
+  color: rgba(255, 255, 255, 0.263);
+  display: flex;
+  justify-content: center;
+  align-items: end;
+}
+
+footer a{
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.263);
 }
 
 @font-face {
